--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -1048,3 +1048,16 @@ padding: 70px 100px;
     background: #000;
     
   }
+
+  .custom-page-content{
+    width: 100%;
+    height: 100%;
+    padding: 10%;
+    position: relative;
+  }
+
+  .custom-page-content-body{
+    border: 1px solid #eee;
+    border-radius: 10px;
+    padding: 10px;
+  }
